-Added all basic language-functions, nothing tested yet.